# stockinfo-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clear_prices.sh  clear_prices_kr.sh  clear_prices_us.sh  docker-compose.yaml  init.sql
.github/workflows/: docker-publish.yaml
config/: default.toml
src/: api.rs  main.rs  model.rs  services.rs  utils.rs
src/api/: v1.rs
src/model/: dart.rs  edgar.rs  error.rs  krx.rs  res_body.rs  stock_company.rs  stock_price.rs  stock_price_us.rs  ticker.rs  web.rs  xbrl.rs
src/model/web/: krx.rs  yahoo.rs
src/services/companies/: api_handler.rs  provider.rs
src/services/dart/: api_handler.rs  provider.rs
src/services/edgar/: api_handler.rs  mod.rs  provider.rs
src/services/prices/: api_handler.rs  provider.rs
src/services/prices_us/: api_handler.rs  provider.rs
src/services/tickers/: api_handler.rs  provider.rs
src/utils/: cache.rs  cors.rs  datetime.rs  db.rs  error.rs  hex.rs  http.rs  settings.rs  telemetry.rs
