[package]
name = "stockinfo-backend"
version = "1.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "macros"]}
actix-web = "4.12"
actix-cors = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# DB
tokio-postgres = {version = "0.7", features = ["with-uuid-1", "with-time-0_3"]}
deadpool-postgres ={version = "0.14", features = ["serde"]}
deadpool-redis = {version = "0.22", features = ["rt_tokio_1", "serde"]}

# logging & tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "registry"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.32"

# opentelemetry
opentelemetry = "0.31"
opentelemetry_sdk = {version = "0.31",features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# files
zip = "6.0"
roxmltree = "0.21"

# Utils
dotenv = "0.15"
config = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = {version = "0.3", features = ["macros", "serde"]}
urlencoding = "2.1"
rust_decimal = {version = "1.39", features = ["db-tokio-postgres", "serde-with-str"]}
openssl = { version = "0.10", features = ["vendored"] }
