[package]
name = "stockinfo-backend"
version = "1.3.12"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.52", features = ["rt", "rt-multi-thread", "macros"]}
actix-web = "4.14"
actix-cors = "0.7"

# DB
tokio-postgres = {version = "0.7", features = ["with-uuid-1", "with-time-0_3"]}
deadpool-postgres ={version = "0.14", features = ["serde"]}
deadpool-redis = {version = "0.23", features = ["rt_tokio_1", "serde"]}

# logging & tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "registry"] }
tracing-actix-web = {version = "0.7", features = ["opentelemetry_0_32"]}
tracing-opentelemetry = "0.33"

# opentelemetry
opentelemetry = "0.32"
opentelemetry_sdk = {version = "0.32",features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }

# Http client
reqwest = { version = "0.13", features = ["query", "form", "json", "cookies"] }

# files
zip = "8.6"
roxmltree = "0.21"

# Utils
dotenv = "0.15"
config = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = {version = "0.3", features = ["macros", "serde"]}
urlencoding = "2.1"
rust_decimal = {version = "1.42", features = ["db-tokio-postgres", "serde-with-str"]}
openssl = { version = "0.10", features = ["vendored"] }
